[package]
name = "aex"
version = "0.1.2"
edition = "2024"
description = "A web server for rust."
license = "GPL-3.0-or-later"
repository = "https://github.com/Free-Web-Movement/aex"
keywords = ["rust", "web", "http", "server", "router"]
authors = ["Eric <calidion@gmail.com>"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0.145"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
bitflags = { version = "2.10.0", features = ["serde"] }
tracing = "0.1.44"
regex = "1.12.2"
form_urlencoded = "1.2.2"
once_cell = "1.21.3"
url = "2.5.8"
lazy_static = "1.5.0"
sha1 = "0.10.6"
base64 = "0.22.1"
zz-validator = "0.1.0"
async-trait = "0.1.89"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "http-server"
path = "src/main.rs"
