[package]
name = "aex"
version = "0.1.4"
edition = "2024"
description = "A web server for rust."
license = "GPL-3.0-or-later"
repository = "https://github.com/Free-Web-Movement/aex"
keywords = ["rust", "web", "http", "server", "router"]
authors = ["Eric <calidion@gmail.com>"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0.145"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
bitflags = { version = "2.10.0", features = ["serde"] }
regex = "1.12.2"
form_urlencoded = "1.2.2"
once_cell = "1.21.3"
url = "2.5.8"
sha1 = "0.10.6"
base64 = "0.22.1"
zz-validator = "0.1.1"
bytes = "1.11.1"
bincode = "2.0.0-rc.3"
tokio-util = "0.7.18"
chrono = "0.4.43"
dashmap = "6.1.0"
get_if_addrs = "0.5.3"
chacha20poly1305 = "0.10.1"
x25519-dalek = "2.0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "http-server"
path = "src/main.rs"

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }