[package]
name = "aex"
version = "0.1.5"
edition = "2024"
description = "A web server for rust."
license = "GPL-3.0-or-later"
repository = "https://github.com/Free-Web-Movement/aex"
keywords = ["rust", "web", "http", "server", "router"]
authors = ["Eric <calidion@gmail.com>"]

[features]
default = ["router-cache"]
router-cache = []
http-timeout = []

[dependencies]
smol = "2.0"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0.145"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
bitflags = { version = "2.10.0", features = ["serde"] }
regex = "1.12.2"
form_urlencoded = "1.2.2"
once_cell = "1.21.3"
url = "2.5.8"
sha1 = "0.10.6"
base64 = "0.22.1"
zz-validator = "0.1.1"
bytes = "1.11.1"
bincode = "2.0.0-rc.3"
tokio-util = { version = "0.7", features = ["codec"] }
chrono = "0.4.43"
dashmap = "6.1.0"
get_if_addrs = "0.5.3"
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
dirs-next = "2.0.0"
h2 = "0.4"
http = "1"
http-body = "1"
http-body-util = "0.1"
derivative = "2.2.0"
tracing = "0.1.44"
ahash = "0.7.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
async-net = "2.0"
async-channel = "2.0"
async-lock = "3.0"
async-fs = "2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "http-server"
path = "src/main.rs"

[[example]]
name = "comparison"
path = "benches/comparison.rs"
harness = false

[[example]]
name = "http_benchmark_aex"
path = "examples/http_benchmark_aex.rs"

[[example]]
name = "http_benchmark_axum"
path = "examples/http_benchmark_axum.rs"

[[example]]
name = "http_benchmark_actix"
path = "examples/http_benchmark_actix.rs"

[[example]]
name = "simple_test"
path = "examples/simple_test.rs"

[[example]]
name = "minimal_test"
path = "examples/minimal_test.rs"

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
smol = "2.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
axum = "0.7"
criterion = "0.5"
h2 = "0.4"

[[bench]]
name = "http_router"
harness = false

[[bench]]
name = "middleware_performance"
harness = false

[[bench]]
name = "codec_performance"
harness = false

[[bench]]
name = "connection_performance"
harness = false
